
name:                hasksdl
version:             0.0.0.1
synopsis:            Just screwing around
description:         Just screwing around
license:             AGPL-3
license-file:        LICENSE
author:              Greg Kettler
maintainer:          gkettler@z.zz
-- copyright:
category:            Not Web
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable hasksdl
  main-is: Main.hs
  --other-modules: Server
  -- other-extensions:
  build-depends:       base
                     , sdl2 >= 2.1.0
                     , linear
  -- hs-source-dirs:
  default-language:    Haskell2010
  ghc-options:     -Wall
